--- a/composer.json
+++ b/composer.json
@@ -1,50 +1,17 @@
 {
-    "name": "orhanerday/open-ai",
-    "description": "OpenAI GPT-3 Api Client in PHP",
-    "keywords": [
-        "orhanerday",
-        "open-ai"
-    ],
-    "homepage": "https://github.com/orhanerday/open-ai",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Orhan Erday",
-            "email": "orhanerday@gmail.com",
-            "role": "Developer"
-        }
-    ],
-    "require": {
-        "php": ">=7.4",
-        "ext-curl": "*",
-        "ext-json": "*"
-    },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.0",
-        "pestphp/pest": "^1.20",
-        "spatie/ray": "^1.28"
-    },
+    "name": "glock-fei/open-api",
+    "description": "OpenAI PHP SDK for orhanerday",
+    "type": "library",
     "autoload": {
         "psr-4": {
-            "Orhanerday\\OpenAi\\": "src"
+            "GlockFei\\OpenApi\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Orhanerday\\OpenAi\\Tests\\": "tests"
+    "authors": [
+        {
+            "name": "glock-fei"
         }
-    },
-    "scripts": {
-        "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest --coverage",
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
-    },
-    "config": {
-        "sort-packages": true,
-        "allow-plugins": {
-            "pestphp/pest-plugin": true
-        }
-    },
+    ],
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "require": {}
 }
